# semanticfusion

./: CMakeLists.txt  FindOpenNI2.cmake
src/: main.cpp
src/cnn_interface/: CaffeInterface.cpp  CaffeInterface.h
src/semantic_fusion/: SemanticFusionCuda.cu  SemanticFusionInterface.cpp  SemanticFusionInterface.h
